0.2.0
-------------------
- Implemented the ability to purge old releases after a successful deploy.

0.1.0
-------------------
- Renamed --pkg_dir option of 'package' task to --destination
- Implemented remote destinations for 'package' task.
- Implemented remote artifact sources for 'deploy' task.
- Added a default timeout of 10 seconds when establishing an SSH connection.

0.0.1
-------------------
- Initial public release.